force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/fields/CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>CRON_Expression__c</fullName>
    <description>CRON expression for scheduling the job (e.g., 0 0 8 * * ? for daily at 8 AM)</description>
    <label>CRON Expression</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>